[project]
name = "grade-tracker"
version = "0.1.0"
description = "A CLI tool to track assignment grades and calculate needed scores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
grade-tracker = "grade_tracker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grade_tracker"]

[dependency-groups]
dev = [
    "pytest>=8",
]
